--- a/webdesign/ongoing prototype/css/styleprint-lambda2.css
+++ b/webdesign/ongoing prototype/css/styleprint-lambda2.css
@@ -1,4 +1,3 @@
-
 @font-face {
 	font-family: Hkgrotesk;
 	src: url(fonts/HKGrotesk-Regular.otf);
@@ -11,16 +10,12 @@
 
 
 body {
-	margin: 0;
-	overflow-y: scroll;
-	overflow-x: hidden;
-/* font-family: "Opensans";*/
+	margin-left: 1cm;
 	font-family: "Hkgrotesk";
-	width: 100%;
-	text-rendering: optimizeSpeed;
-/*    position: relative; */
+	width: 18cm;
 	background-color: #fff;
 }
+
 
 .main {
 }
@@ -38,6 +33,7 @@ a:hover {
 /*
 ************ FIXED BAR *************
 */
+/*
 .fixedbar {
 	height: 20px;
 	width: 100%;
@@ -57,8 +53,6 @@ a:hover {
 .fixedbar .title {
 	float: right;
 	position: relative;
-/*font-family: "LeagueGothic";
-    text-transform: uppercase;*/
 	font-size: 17px;
 	line-height: .9em;
 	max-width: 20%;
@@ -66,30 +60,31 @@ a:hover {
 	z-index: -99999;
 	font-family: "Hkgrotesk";
 }
-
+/*
 /*
 ************ SUMMARY BOX *************
 */
 #info-box {
 	height: auto;
+    width: 18cm;
 	overflow: hidden;
-	width: 100%;
 /*     background-color: #efefef; */
 	color: #000;
-	padding-left: 40px;
-	background-color: rgba(255,51,0,0.1);
-	padding-bottom: 30px;
+	padding-left: 0px;
+/*	background-color: rgba(255,51,0,0.1);*/
 }
 
 #book-title {
-	font-size: 20pt;
-	line-height: 24pt;
+	font-size: 50pt;
+	line-height: 54pt;
 	max-width: 15cm;
+    font-family: "Georgia";
+    margin-bottom: 1cm;
 }
 
 #summary {
 	font-size: 12pt;
-	max-width: 13cm;
+	width: 17cm;
 	border-radius: 10px;
 	padding-right: 10px;
 /* padding: 15px 30px 20px 20px;/*
@@ -115,20 +110,17 @@ a:hover {
 }*/
 .author_tofill {
 	color: #f30;
-	font-size: 40px;
-	line-height: 1.2em;
+	font-size: 14pt;
 }
 
 .editor_tofill {
-	color: green;
-	font-size: 40px;
-	line-height: 1.2em;
+	color: green;	font-size: 14pt;
+
 }
 
 .date_tofill {
-	color: #00008b;
-	font-size: 40px;
-	line-height: 1.2em;
+	color: #00008b;	font-size: 14pt;
+
 }
 
 /************* READER ***************/
@@ -141,8 +133,9 @@ b {
 	color: #171717;
 /*  background-color: #f4f4f4; */
 	background-color: #fff;
-	width: 100%;
-	font-size: 11pt;
+	width: auto;
+	font-size: 9pt;
+    line-height: 13pt;
 }
 
 .section ul {
@@ -150,7 +143,7 @@ b {
 }
 
 .section current {
-	width: 100%;
+	width: auto;
 	padding-top: 0;
 }
 
@@ -158,55 +151,26 @@ b {
 	margin-top: 10px;
 }
 
-#display1 {
-	position: fixed;
-	right: 2%;
-	top: 45%;
-	z-index: 99;
+#display1, #display {
+ display:none;
+    color:white;
 }
 
-#display {
-	position: fixed;
-	right: 2%;
-	bottom: 45%;
-	z-index: 99;
-}
-
-@media (max-height:600px) {
-#display1 {
-	top: 40%;
-}
-
-#display {
-	bottom: 40%;
-}
-}
-
-.content {
+.content, .content-pushed {
 /*   overflow-x: hidden;
    /* margin-left: 15%;
     margin-right: 15%;*/
-	font-size: 1.2em;
-	line-height: 1.6em;
+	font-size: 12pt;
+	line-height: 15pt;
 	color: #1a1a1a;
 	margin: 0;
-}
-
-.content-pushed {
-/* width: 60%; 
-    margin-left: 10%;
-    margin-right: 5%;*/
-	line-height: 32px;
-	margin-right: 0;
-	margin-left: 0;
-	width: 90%;
-	padding-left: 0;
+    width: 20cm;
 }
 
 .content-pushed .text {
-	padding-left: 30px;
+	padding-left: 0px;
 }
-
+/*
 .content-pushed .sidenote {
 	clear: right;
 	margin-right: 23%;
@@ -233,7 +197,7 @@ b {
 	margin-right: 0;
 	padding: 0 2px;
 	font-size: 10px;
-}
+}*/
 
 a {
 }
@@ -285,8 +249,9 @@ a {
 	max-width: 700px;
 /*  font-family: "Umemincho"; */
 	font-family: "Georgia";
-	font-size: 4em;
-	line-height: 1em;
+	font-size: 24pt;
+	line-height: 26pt;
+    page-break-before: always;
 /*
 background-color: #c6c6c6;
 border-radius:5px;
@@ -298,12 +263,12 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=#c6c6c6, Direction=134, St
 }
 
 .section h3 {
-	font-size: 24px;
+	font-size: 18pt;
+    page-break-inside: auto;
+    page-break-after: avoid;
 }
 
 .section p,h2,h3,h1,img,.author {
-	margin-right: 40%;
-	font-weight: 400;
 	width: auto;
 }
 
@@ -312,8 +277,10 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=#c6c6c6, Direction=134, St
 }
 
 .section p {
-	font-size: 1.6em;
-	line-height: 1.7em;
+	font-size: 12pt;
+	line-height: 15pt;
+    width: 14cm;
+    margin-right: 4cm;
 }
 
 .author {
@@ -334,17 +301,11 @@ filter:progid:DXImageTransform.Microsoft.Shadow(color=#c6c6c6, Direction=134, St
 }
 
 img {
-	z-index: -1.0E+16;
 	width: 55%;
 	text-align: center;
 	margin-top: 40px;
 	margin-left: 40px;
 	margin-bottom: 40px;
-	-moz-box-shadow: 5px 5px 40px 30px #e6e6e6;
-	-webkit-box-shadow: 5px 5px 40px 30px #e6e6e6;
-	-o-box-shadow: 5px 5px 40px 30px #e6e6e6;
-	box-shadow: 5px 5px 40px 30px #e6e6e6;
-	filter: progid:DXImageTransform.Microsoft.Shadow(color=#e6e6e6,Direction=134,Strength=50s);
 }
 
 section.content {
@@ -354,9 +315,8 @@ section.content {
 .text {
 	margin-top: 0;
 	margin-left: 0;
-	padding-left: 30px;
-/* padding: 0px 35px 0px 35px;*/
-	border-top: 1px solid #000;
+	padding-left: 0px;
+    width: 17cm;
 }
 
 .about_authors {
@@ -369,14 +329,19 @@ section.content {
 /************* REFERENCE LISTS ***************/
 #reference-list,#reference-list-1,#reference-list-2,#reference-list-3,#reference-list-4,#reference-list-5,#reference-list-6,#reference-list-7,#reference-list-8,#reference-list-9,#reference-list-10 {
 	font-family: "Verdana";
-	font-size: .8em;
-	text-decoration: underline;
+	font-size: 8pt;
+	line-height: 10pt;
+    text-decoration: underline;
 }
 
 .references {
-	font-size: .7em;
-	line-height: 1.4em;
 	text-indent: 20px;
+	font-size: 8pt;
+	line-height: 10pt;
+}
+.references p {
+	font-size: 8pt;
+	line-height: 10pt;
 }
 
 /************* NOTE ***************/
@@ -387,14 +352,13 @@ section.content {
 	line-height: .7em;
 }
 
-.sidenote {
+.sidenote, .content-pushed .sidenote {
 	clear: right;
-	margin-right: 17%;
 	margin-bottom: 2px;
-	width: 15%;
+	width: 3cm;
 	float: right;
-	font-size: 10px;
-	line-height: 14px;
+	font-size: 6pt;
+	line-height: 8pt;
 	overflow-wrap: break-word;
 	word-wrap: break-word;
 	-ms-word-break: break-all;
@@ -404,16 +368,18 @@ section.content {
 	-webkit-hyphens: auto;
 	hyphens: auto;
 	font-family: "Verdana";
-	z-index: 9999999;
 	border-radius: 5Px;
-	background-color: #f4f4f4;
+	background-color: transparent;
+    page-break-inside: avoid;
+    margin-right: -1cm;
+    right:0;
 }
 
-.sidenote p {
-	margin-right: 0;
-	padding: 0 5px;
-	font-size: 10px;
-	line-height: 13px;
+.sidenote p, .content-pushed .sidenote p {
+	margin-right: 3mm;	margin-left: 3mm;
+    width: 3cm;
+    font-size: 6pt;
+	line-height: 8pt;
 }
 
 
@@ -460,7 +426,9 @@ section.content {
 
 #tools {
 }
-
+#tool-fontsize {
+    display: none;    
+}
 #citation-box {
 	position: fixed;
 	width: 320px;
@@ -488,101 +456,13 @@ section.content {
 }
 */
 button {
-	margin: 0;
-	font: 11px HKgrotesk;
-	text-rendering: auto;
-	color: initial;
-	letter-spacing: normal;
-	word-spacing: normal;
-	text-transform: none;
-	text-indent: 0;
-	text-shadow: none;
-	display: inline-block;
-	text-align: start;
-	border: 1px solid #000;
-	border-radius: 5px;
+display: none;
 }
 
 textarea {
 	min-height: 50px;
 	width: 250px;
 	font-family: "Hkgrotesk";
-}
-
-/************* MENU ***************/
-/* PRINT / SHARE / FILES */
-.menu-below {
-	padding-left: 20px;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	transition: all .3s ease;
-	margin: auto;
-	text-decoration: none;
-	border-bottom: 0;
-	background-color: rgba(255,51,0,0.33);
-}
-
-.menu-below hr {
-	margin-top: 5px;
-	height: 1px;
-	border: 0;
-	padding: 0;
-}
-
-.menu-below:hover hr {
-	margin-top: 160px;
-	background-color: #f30;
-	color: #fff;
-}
-
-.button-menu-below {
-	margin-right: 70px;
-	position: relative;
-	float: left;
-}
-
-.text-share {
-	display: block;
-	margin: 0;
-	text-transform: uppercase;
-}
-
-#hover-button {
-	display: none;
-	position: absolute;
-}
-
-.menu-below:hover #hover-button {
-	display: block;
-	margin: 0;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	transition: all .3s ease;
-}
-
-.menu-below:hover .button-menu-below {
-	margin-right: 70px;
-	text-decoration: none;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	transition: all .3s ease;
-}
-
-.hover-button {
-	text-decoration: none;
-}
-
-.menu-below .button-menu-below a {
-	text-decoration: none;
-	font-size: 14px;
-	text-transform: none;
-	border-radius: 5px;
-	padding: 2px;
-}
-
-.text-share #hover-button .hover-button a {
-	background-color: rgba(95,95,95,0.29);
-	border-radius: 5px;
 }
 
 /* structure */
@@ -625,17 +505,11 @@ textarea {
 }
 
 .pushmenu-left,.pushmenu-left2 {
-	left: -20%;
-	overflow-y: scroll;
+display: none;
 }
 
 .pushmenu-left.pushmenu-open,.pushmenu-left2.pushmenu-open {
-	left: 0;
-/*  border-right: solid 1px black;*/
-	border-right: solid 0 #000;
-	-webkit-box-shadow: 0 10px 15px rgba(0,0,0,0.2);
-	-moz-box-shadow: 0 10px 15px rgba(0,0,0,0.2);
-	box-shadow: 0 10px 15px rgba(0,0,0,0.2);
+    display: none;
 }
 
 .pushmenu-push,.pushmenu-push2 {
@@ -645,7 +519,7 @@ textarea {
 }
 
 .pushmenu-push-toright {
-	left: 20%;
+	left: 0cm;
 }
 
 .pushmenu a {
@@ -695,12 +569,6 @@ textarea {
 }
 
 /*Transition*/
-.pushmenu,.pushmenu-push {
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	transition: all .3s ease;
-}
-
 .pushmenu-left .pushmenu-open .buttonset {
 	position: fixed;
 	left: 400px;
@@ -712,40 +580,13 @@ textarea {
 	left: 0;
 }
 
-#nav_list /* button to active the pushmenu */ {
-/* background: url(http://www.onlywebpro.com/demo/jquery/icon_nav.png) no-repeat;*/
-	cursor: pointer;
-	width: 20px;
-/* text-indent: -99999em; */
-	line-height: normal;
-	text-align: left;
-/* background: linear-gradient(rgba(255, 51, 0, 0.4) 50%, rgba(255, 255, 255, 1) 50%); 
-       background: linear-gradient(rgba(0, 0, 0, 0.78) 50%, rgba(255, 255, 255, 1) 50%);*/
-	color: #000;
-	border-top: none;
-/* box-shadow: 0px -3px 15px 8px white;
-    -webkit-box-shadow: 0px -3px 15px 8px white;
-    -moz-box-shadow: 0px -3px 15px 8px white;*/
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	transition: all .3s ease;
-}
-
-.nav_list {
-	border: 1px solid #000;
-	padding: 2px 4px;
-	margin-left: 0;
-	background-color: #fff;
-	border-radius: 5px;
-}
-
-.nav_list:hover {
-	background-color: #f30;
+#nav_list, .nav_list /* button to active the pushmenu */ {
+display: none;
 }
 
 .pushmenu-left .pushmenu-open #nav-list {
 	display: none;
-	margin-left: 70px;
+	margin-left: 0cm;
 }
 
 /************* FOOTER ***************/
